# Bioinfo-skills

./: .dockerignore  .gitignore  AGENTS.md  README.md  pyproject.toml
.specify/: extensions.yml  feature.json
SPEC/: README.md  bioinfo_native_section_sdd_plan.md  design_principles.md  environment_transferability_and_version_traceability.md  routing_policy.md  scrna_scverse_skill_system_v0.md  scverse_content_and_code_fill_plan.md  seurat_r_package_support_plan.md  skill_system_core_workflow.md
containers/: Dockerfile.scverse.template  scverse.apptainer.def.template
contracts/: anndata_scrna_state_v0.yml  embeddings_graph_schema.md  layer_slot_policy.md  marker_ranking_policy.md  obs_var_uns_schema.md  scrna_required_metadata.md  seurat_object_state_v0.yml  statistical_validity_policy.md
envs/: lock-tools.yml  package-matrix.yml  r-seurat-notebook.yml  r-seurat-optional.yml  r-seurat-placeholder.yml  r-seurat.yml  scverse-python-extra.txt  scverse-python.yml
provenance/: artifact_manifest.template.yml  decision_log.template.yml  run_manifest.template.yml  software_versions.template.yml
schemas/: anndata_state.schema.json  artifact_manifest.schema.json  decision_log.schema.json  package_ref.schema.json  provenance_run_manifest.schema.json  runtime_report.schema.json  skill_manifest.schema.json  tool_ref.schema.json  workflow_node.schema.json
scripts/: check_anndata_contract.py  check_scverse_runtime.py  check_seurat_runtime.py  inspect_snakefile_policy.py  install_seurat_source_packages.R  render_skill_manifest.py  repair_relocated_r_runtime.py  (+1 more)
(+242 files in other folders)
